idaholab/Malcolm#189; kubernetes - use Secrets for some environment variables instead of ConfigMaps

--- a/config/process.env.example
+++ b/config/process.env.example
@@ -3,5 +3,5 @@ PUID=1000
 PGID=1000
 # for debugging container init via tini (https://github.com/krallin/tini)
 TINI_VERBOSITY=1
-# for handling configmap files/directories
-CONFIG_MAP_DIR=configmap
+# for handling configmap/secrets files/directories
+CONFIG_MAP_DIR=configmap;secretmap
