--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,7 @@ services:
       - ./config/opensearch.env
       - ./config/netbox-common.env
       - ./config/netbox.env
+      - ./config/netbox-secret.env
       - ./config/beats-common.env
       - ./config/lookup-common.env
       - ./config/logstash.env
@@ -202,6 +203,7 @@ services:
       - ./config/upload-common.env
       - ./config/auth.env
       - ./config/arkime.env
+      - ./config/arkime-secret.env
     environment:
       VIRTUAL_HOST : 'arkime.malcolm.local'
     ulimits:
@@ -250,6 +252,7 @@ services:
       - ./config/ssl.env
       - ./config/upload-common.env
       - ./config/zeek.env
+      - ./config/zeek-secret.env
       - ./config/zeek-offline.env
     depends_on:
       - opensearch
@@ -290,6 +293,7 @@ services:
       - ./config/upload-common.env
       - ./config/pcap-capture.env
       - ./config/zeek.env
+      - ./config/zeek-secret.env
       - ./config/zeek-live.env
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
@@ -380,6 +384,7 @@ services:
       - ./config/process.env
       - ./config/ssl.env
       - ./config/zeek.env
+      - ./config/zeek-secret.env
     environment:
       VIRTUAL_HOST : 'file-monitor.malcolm.local'
     volumes:
@@ -547,6 +552,7 @@ services:
       - ./config/ssl.env
       - ./config/netbox-common.env
       - ./config/netbox.env
+      - ./config/netbox-secret.env
     environment:
       VIRTUAL_HOST : 'netbox.malcolm.local'
     depends_on:
