--- a/kubernetes/07-api.yml
+++ b/kubernetes/07-api.yml
@@ -63,12 +63,12 @@ spec:
         volumeMounts:
           - mountPath: /var/local/ca-trust/configmap
             name: api-var-local-catrust-volume
-          - mountPath: /var/local/curlrc/configmap
-            name: api-opensearch-curlrc-volume
+          - mountPath: /var/local/curlrc/secretmap
+            name: api-opensearch-curlrc-secret-volume
       volumes:
         - name: api-var-local-catrust-volume
           configMap:
             name: var-local-catrust
-        - name: api-opensearch-curlrc-volume
-          configMap:
-            name: opensearch-curlrc
+        - name: api-opensearch-curlrc-secret-volume
+          secret:
+            secretName: opensearch-curlrc
