--- a/kubernetes/21-zeek-live.yml
+++ b/kubernetes/21-zeek-live.yml
@@ -37,6 +37,8 @@ spec:
               name: upload-common-env
           - configMapRef:
               name: zeek-env
+          - secretRef:
+              name: zeek-secret-env
           - configMapRef:
               name: zeek-live-env
           - configMapRef:
