--- a/kubernetes/03-dashboards.yml
+++ b/kubernetes/03-dashboards.yml
@@ -61,12 +61,12 @@ spec:
         volumeMounts:
           - mountPath: /var/local/ca-trust/configmap
             name: dashboards-var-local-catrust-volume
-          - mountPath: /var/local/curlrc/configmap
-            name: dashboards-opensearch-curlrc-volume
+          - mountPath: /var/local/curlrc/secretmap
+            name: dashboards-opensearch-curlrc-secret-volume
       volumes:
         - name: dashboards-var-local-catrust-volume
           configMap:
             name: var-local-catrust
-        - name: dashboards-opensearch-curlrc-volume
-          configMap:
-            name: opensearch-curlrc
+        - name: dashboards-opensearch-curlrc-secret-volume
+          secret:
+            secretName: opensearch-curlrc
