--- a/kubernetes/09-zeek.yml
+++ b/kubernetes/09-zeek.yml
@@ -37,6 +37,8 @@ spec:
               name: upload-common-env
           - configMapRef:
               name: zeek-env
+          - secretRef:
+              name: zeek-secret-env
           - configMapRef:
               name: zeek-offline-env
         livenessProbe:
