--- a/kubernetes/16-netbox-redis-cache.yml
+++ b/kubernetes/16-netbox-redis-cache.yml
@@ -47,7 +47,7 @@ spec:
               name: ssl-env
           - configMapRef:
               name: netbox-common-env
-          - configMapRef:
+          - secretRef:
               name: netbox-redis-cache-env
         env:
           - name: VIRTUAL_HOST
