--- a/kubernetes/17-netbox-postgres.yml
+++ b/kubernetes/17-netbox-postgres.yml
@@ -45,7 +45,7 @@ spec:
               name: ssl-env
           - configMapRef:
               name: netbox-common-env
-          - configMapRef:
+          - secretRef:
               name: netbox-postgres-env
         env:
           - name: VIRTUAL_HOST
