--- a/kubernetes/11-file-monitor.yml
+++ b/kubernetes/11-file-monitor.yml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: file-monitor-container
-        image: ghcr.io/idaholab/malcolm/file-monitor:23.04.1
+        image: ghcr.io/mmguero-dev/malcolm/file-monitor:development
         imagePullPolicy: Always
         stdin: false
         tty: true
