--- a/kubernetes/19-htadmin.yml
+++ b/kubernetes/19-htadmin.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: htadmin-container
-        image: ghcr.io/idaholab/malcolm/htadmin:23.04.1
+        image: ghcr.io/mmguero-dev/malcolm/htadmin:development
         imagePullPolicy: Always
         stdin: false
         tty: true
