--- a/kubernetes/02-opensearch.yml
+++ b/kubernetes/02-opensearch.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: opensearch-container
-        image: ghcr.io/mmguero-dev/malcolm/opensearch:development
+        image: ghcr.io/idaholab/malcolm/opensearch:23.05.0
         imagePullPolicy: Always
         stdin: false
         tty: true
