--- a/kubernetes/22-suricata-live.yml
+++ b/kubernetes/22-suricata-live.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: suricata-live-container
-        image: ghcr.io/mmguero-dev/malcolm/suricata:development
+        image: ghcr.io/idaholab/malcolm/suricata:23.05.0
         imagePullPolicy: Always
         stdin: false
         tty: true
