--- a/kubernetes/10-suricata.yml
+++ b/kubernetes/10-suricata.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: suricata-offline-container
-        image: ghcr.io/mmguero-dev/malcolm/suricata:development
+        image: ghcr.io/idaholab/malcolm/suricata:23.05.1
         imagePullPolicy: Always
         stdin: false
         tty: true
