--- a/kubernetes/16-netbox-redis-cache.yml
+++ b/kubernetes/16-netbox-redis-cache.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: netbox-redis-cache-container
-        image: ghcr.io/mmguero-dev/malcolm/redis:development
+        image: ghcr.io/idaholab/malcolm/redis:23.05.1
         imagePullPolicy: Always
         stdin: false
         tty: true
