--- a/kubernetes/98-nginx-proxy.yml
+++ b/kubernetes/98-nginx-proxy.yml
@@ -5,6 +5,8 @@ metadata:
   name: nginx-proxy
   namespace: malcolm
 spec:
+  # use "type: ClusterIP" if using Ingress-NGINX as illustrated in 99-ingress-nginx.yml.example
+  # use "type: LoadBalancer" if using AWS Load Ballancer as illustrated in 99-ingress-alb.yml.example
   type: ClusterIP
   ports:
     - port: 443
