--- a/kubernetes/99-ingress-aws-alb.yml.example
+++ b/kubernetes/99-ingress-aws-alb.yml.example
@@ -62,3 +62,39 @@ spec:
             name: nginx-proxy
             port:
               number: 9200
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: malcolm-nlb-logstash
+  namespace: malcolm
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "external"
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
+spec:
+  type: LoadBalancer
+  selector:
+    name: logstash-deployment
+  ports:
+    - port: 5044
+      targetPort: 5044
+      protocol: TCP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: malcolm-nlb-tcp-json
+  namespace: malcolm
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "external"
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
+spec:
+  type: LoadBalancer
+  selector:
+    name: filebeat-deployment
+  ports:
+    - port: 5045
+      targetPort: 5045
+      protocol: TCP
