--- a/kubernetes/17-netbox-postgres.yml
+++ b/kubernetes/17-netbox-postgres.yml
@@ -72,6 +72,21 @@ spec:
           - mountPath: /var/lib/postgresql/data
             name: netbox-postgres-volume
             subPath: netbox/postgres
+      initContainers:
+      - name: netbox-postgres-dirinit-container
+        image: ghcr.io/mmguero-dev/malcolm/dirinit:development
+        imagePullPolicy: Always
+        stdin: false
+        tty: true
+        envFrom:
+          - configMapRef:
+              name: process-env
+        env:
+          - name: PUSER_MKDIR
+            value: "/data/config:netbox/postgres"
+        volumeMounts:
+          - name: netbox-postgres-volume
+            mountPath: "/data/config"
       volumes:
         - name: netbox-postgres-var-local-catrust-volume
           configMap:
