--- a/kubernetes/22-suricata-live.yml
+++ b/kubernetes/22-suricata-live.yml
@@ -47,7 +47,27 @@ spec:
         volumeMounts:
           - mountPath: /var/local/ca-trust/configmap
             name: suricata-live-var-local-catrust-volume
+          - mountPath: /var/log/suricata
+            name: suricata-live-suricata-logs-volume
+      initContainers:
+      - name: suricata-live-dirinit-container
+        image: ghcr.io/mmguero-dev/malcolm/dirinit:development
+        imagePullPolicy: Always
+        stdin: false
+        tty: true
+        envFrom:
+          - configMapRef:
+              name: process-env
+        env:
+          - name: PUSER_MKDIR
+            value: "/data/suricata-logs:live"
+        volumeMounts:
+          - name: suricata-live-suricata-logs-volume
+            mountPath: "/data/suricata-logs"
       volumes:
         - name: suricata-live-var-local-catrust-volume
           configMap:
             name: var-local-catrust
+        - name: suricata-live-suricata-logs-volume
+          persistentVolumeClaim:
+            claimName: suricata-claim
