--- a/kubernetes/98-nginx-proxy.yml
+++ b/kubernetes/98-nginx-proxy.yml
@@ -93,6 +93,23 @@ spec:
         - name: nginx-runtime-logs-volume
           mountPath: /var/log/nginx
           subPath: "nginx"
+      initContainers:
+      - name: nginx-dirinit-container
+        image: ghcr.io/mmguero-dev/malcolm/dirinit:development
+        imagePullPolicy: Always
+        stdin: false
+        tty: true
+        envFrom:
+          - configMapRef:
+              name: process-env
+        env:
+          - name: PUSER_MKDIR
+            value: "/data/config:auth;/data/runtime-logs:nginx"
+        volumeMounts:
+          - name: nginx-etc-auth-volume
+            mountPath: "/data/config"
+          - name: nginx-runtime-logs-volume
+            mountPath: "/data/runtime-logs"
       volumes:
       - name: nginx-etc-nginx-volume
         configMap:
