beginning work on populate netbox inventory passively (idaholab/Malcolm#135)

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -484,6 +484,7 @@ filter {
           "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "lookup_service" => "false"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
+          "autopopulate_env" => "LOGSTASH_NETBOX_AUTO_POPULATE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
         }
       }
@@ -496,6 +497,7 @@ filter {
           "lookup_type" => "ip_vrf"
           "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
+          "autopopulate_env" => "LOGSTASH_NETBOX_AUTO_POPULATE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
         }
       }
