work in progress on autopopulation of netbox stuff

--- a/logstash/pipelines/enrichment/21_netbox.conf
+++ b/logstash/pipelines/enrichment/21_netbox.conf
@@ -45,6 +45,10 @@ filter {
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
           "autopopulate_env" => "LOGSTASH_NETBOX_AUTO_POPULATE"
+          "default_manuf_env" => "NETBOX_DEFAULT_MANUFACTURER"
+          "default_dtype_env" => "NETBOX_DEFAULT_DEVICE_TYPE"
+          "default_drole_env" => "NETBOX_DEFAULT_DEVICE_ROLE"
+          "autopopulate_fuzzy_threshold_env" => "NETBOX_DEFAULT_FUZZY_THRESHOLD"
           "source_oui" => "[source][oui]"
           "source_segment" => "[source][segment]"
         }
@@ -77,6 +81,10 @@ filter {
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
           "autopopulate_env" => "LOGSTASH_NETBOX_AUTO_POPULATE"
+          "default_manuf_env" => "NETBOX_DEFAULT_MANUFACTURER"
+          "default_dtype_env" => "NETBOX_DEFAULT_DEVICE_TYPE"
+          "default_drole_env" => "NETBOX_DEFAULT_DEVICE_ROLE"
+          "autopopulate_fuzzy_threshold_env" => "NETBOX_DEFAULT_FUZZY_THRESHOLD"
           "source_oui" => "[destination][oui]"
           "source_segment" => "[destination][segment]"
         }
