for idaholab/Malcolm#218, set scanners to vuln and output to json

--- a/.github/workflows/file-monitor-build-and-push-ghcr.yml
+++ b/.github/workflows/file-monitor-build-and-push-ghcr.yml
@@ -72,8 +72,9 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'image'
+          scanners: 'vuln'
           image-ref: ghcr.io/${{ github.repository_owner }}/malcolm/file-monitor:${{ steps.extract_branch.outputs.branch }}
-          format: 'table'
+          format: 'json'
           severity: 'HIGH,CRITICAL'
           vuln-type: 'os,library'
           hide-progress: true
