--- a/.github/workflows/arkime-build-and-push-ghcr.yml
+++ b/.github/workflows/arkime-build-and-push-ghcr.yml
@@ -74,8 +74,9 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'image'
+          scanners: 'vuln'
           image-ref: ghcr.io/${{ github.repository_owner }}/malcolm/arkime:${{ steps.extract_branch.outputs.branch }}
-          format: 'table'
+          format: 'json'
           severity: 'HIGH,CRITICAL'
           vuln-type: 'os,library'
           hide-progress: true
