--- a/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
@@ -20,6 +20,7 @@ jobs:
       actions: write
       packages: write
       contents: read
+      security-events: write
     defaults:
       run:
         shell: bash
@@ -110,12 +111,19 @@ jobs:
         with:
           scan-type: 'fs'
           scan-ref: './sensor-iso'
-          format: 'json'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
           severity: 'HIGH,CRITICAL'
           vuln-type: 'os,library'
           hide-progress: true
           ignore-unfixed: true
           exit-code: '0'
+      -
+        name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
       -
         name: ghcr.io login
         uses: docker/login-action@v2
