move miscbeats agent/host information up

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -7,6 +7,12 @@
 
 filter {
 
+  # move a couple of things identifying the event source from under miscbeat up to the top level
+  if (![host]) and ([miscbeat][host])   { mutate { id => "mutate_rename_miscbeat_host"
+                                                   rename => { "[miscbeat][host]"  => "[host]" } } }
+  if (![agent]) and ([miscbeat][agent]) { mutate { id => "mutate_rename_miscbeat_agent"
+                                                   rename => { "[miscbeat][agent]"  => "[agent]" } } }
+
   if (![host][name]) and ([agent][hostname]) {
     mutate { id => "mutate_beats_add_field_host_name_agent_hostname"
              add_field => { "[host][name]" => "%{[agent][hostname]}" } }
