--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -8,12 +8,26 @@
 filter {
 
   # move a couple of things identifying the event source from under miscbeat up to the top level
-  mutate { id => "mutate_rename_miscbeat_host"
-           rename => { "[host]" => "[miscbeat][host]" }
-           remove_field => [ "[miscbeat][host]" ] }
-  mutate { id => "mutate_rename_miscbeat_agent"
-           rename => { "[agent]" => "[miscbeat][agent]" }
-           remove_field => [ "[miscbeat][agent]" ] }
+  if ([miscbeat][host]) {
+    ruby {
+      id => "ruby_miscbeat_host_merge"
+      path => "/usr/share/logstash/malcolm-ruby/hash_merge.rb"
+      script_params => {
+        "source" => "[miscbeat][host]"
+        "target" => "[host]"
+      }
+    }
+  }
+  if ([miscbeat][agent]) {
+    ruby {
+      id => "ruby_miscbeat_agent_merge"
+      path => "/usr/share/logstash/malcolm-ruby/hash_merge.rb"
+      script_params => {
+        "source" => "[miscbeat][agent]"
+        "target" => "[agent]"
+      }
+    }
+  }
 
   if (![host][name]) and ([agent][hostname]) {
     mutate { id => "mutate_beats_add_field_host_name_agent_hostname"
