--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -16,6 +16,7 @@ filter {
         "source" => "[miscbeat][host]"
         "target" => "[host]"
       }
+      remove_field => [ "[miscbeat][host]" ]
     }
   }
   if ([miscbeat][agent]) {
@@ -26,6 +27,7 @@ filter {
         "source" => "[miscbeat][agent]"
         "target" => "[agent]"
       }
+      remove_field => [ "[miscbeat][agent]" ]
     }
   }
 
