work in progress for auto-population, idaholab/Malcolm#135

--- a/logstash/pipelines/enrichment/21_netbox.conf
+++ b/logstash/pipelines/enrichment/21_netbox.conf
@@ -50,6 +50,7 @@ filter {
           "default_drole_env" => "NETBOX_DEFAULT_DEVICE_ROLE"
           "autopopulate_fuzzy_threshold_env" => "NETBOX_DEFAULT_FUZZY_THRESHOLD"
           "source_oui" => "[source][oui]"
+          "source_mac" => "[source][mac]"
         }
       }
     }
@@ -85,6 +86,7 @@ filter {
           "default_drole_env" => "NETBOX_DEFAULT_DEVICE_ROLE"
           "autopopulate_fuzzy_threshold_env" => "NETBOX_DEFAULT_FUZZY_THRESHOLD"
           "source_oui" => "[destination][oui]"
+          "source_mac" => "[destination][mac]"
         }
       }
     }
