--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -561,7 +561,7 @@ services:
       - netbox-redis-cache
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
-      - ./netbox/config/configuration:/etc/netbox/config:ro
+      - ./netbox/config:/etc/netbox/config:ro
       - ./netbox/media:/opt/netbox/netbox/media:rw
       - ./net-map.json:/usr/local/share/net-map.json:ro
       - ./netbox/service-template-defaults.json:/etc/service-template-defaults.json:ro
